--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -374,13 +374,13 @@
     <script src='/assets/js/OwO.min.js?ver=1.0.1'></script>
     <script src='/assets/js/pjax.min.js?ver=0.0.7'></script>
     <script type='text/javascript'>
-      var xb = {"thome":"https:\/\/"+document.location.host+"\/assets\/images\/kratos-pjax-0.2.5","ctime":"01\/25\/2017 15:25:00","donate":"\u041d\u0430\u0433\u0440\u0430\u0434\u0430 \u0430\u0432\u0442\u043e\u0440\u0443","scan":"\u041f\u043e\u0434\u043d\u0438\u043c\u0438\u0442\u0435 \u043f\u043b\u0430\u0442\u0435\u0436","alipay":"http:\/\/"+document.location.host+"\/assets\/images\/kratos-pjax-0.2.5\/images\/alipayqr.png","wechat":"http:\/\/"+document.location.host+"\/assets\/images\/kratos-pjax-0.2.5\/images\/wechatpayqr.png","owo":"https:\/\/"+document.location.host+"\/assets\/images\/kratos-pjax-0.2.5","site_sh":"61"};
+      var xb = {"thome":"https:\/\/"+document.location.host+"\/assets\/images","ctime":"01\/25\/2017 15:25:00","donate":"\u041d\u0430\u0433\u0440\u0430\u0434\u0430 \u0430\u0432\u0442\u043e\u0440\u0443","scan":"\u041f\u043e\u0434\u043d\u0438\u043c\u0438\u0442\u0435 \u043f\u043b\u0430\u0442\u0435\u0436","alipay":"http:\/\/"+document.location.host+"\/assets\/images\/alipayqr.png","wechat":"http:\/\/"+document.location.host+"\/assets\/images\/wechatpayqr.png","owo":"https:\/\/"+document.location.host+"\/assets\/images\/kratos-pjax-0.2.5","site_sh":"61"};
     </script>
     <script src='/assets/js/kratos.js?ver=0.2.5'></script>
     <script src='/assets/js/live2d.js?ver=l2d'></script>
     <script src='/assets/js/waifu-tips.js?ver=1.3'></script>
     <script src='https://cdnjs.cat.net/ajax/libs/dplayer/1.6.1/DPlayer.min.js?ver=1.6.1'></script>
-    <script src='https://blog.junior.moe/wp-content/plugins/dplayer-for-wp/dplayer/init-dplayer.js?ver=1.0.0'></script>
+    <script src='/assets/js/init-dplayer.js?ver=1.0.0'></script>
     <script>
       var iframeLoad235 = '';(function(w, d){window.addEventListener('LazyLoad::Initialized', function (e) {// Get the instance and puts it in the lazyLoadInstance variable
       lazyContent = e.detail.instance;}, false);var b = d.getElementsByTagName('body')[0];var s = d.createElement("script");var v = !("IntersectionObserver" in w) ? "8.17.0" : "10.19.0";s.async = true; // This includes the script as async. See the "recipes" section for more information about async loading of LazyLoad.
