--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -89,7 +89,9 @@
 
     <!-- Preconnect -->
     <link href='https://cdn.jsdelivr.net' rel='preconnect' />
+    <link href='https://cdnjs.cat.net' rel='preconnect' />
     <link href='https://www.googletagmanager.com' rel='preconnect' />
+    <link rel='dns-prefetch' href='//cdn.jsdelivr.net' />
     <link rel='dns-prefetch' href='//cdn.jsdelivr.net' />
 
     <link rel='stylesheet' id='jquery-ui-css-css' href='https://cdn.jsdelivr.net/npm/jquery-ui-css@1.11.5/jquery-ui.min.css' type='text/css' media='' />
